add_subdirectory( term)
if( USE_MPI)
	add_subdirectory( distributed)
endif( USE_MPI)
add_subdirectory( abstract_simplex)
add_subdirectory( chain)
add_subdirectory( chain_complex)
add_subdirectory( finite_field)
add_subdirectory( filtration)
add_subdirectory( tools)
add_subdirectory( product_cell)
add_subdirectory( parallel)
