add_executable( as ctl_test.cpp test_abstract_simplex.cpp)
add_executable( bt ctl_test.cpp test_blowup_tool.cpp)
add_executable( chain ctl_test.cpp test_chain.cpp)
add_executable( cg ctl_test.cpp test_cover_generation.cpp)
#add_executable( ct ctl_test.cpp test_cover_tool.cpp)
add_executable( cube ctl_test.cpp test_cube.cpp)
add_executable( ccc ctl_test.cpp test_cubical_chain_complex.cpp)
add_executable( filt ctl_test.cpp test_filtration.cpp)
add_executable( ff ctl_test.cpp test_finite_field.cpp)
add_executable( os ctl_test.cpp test_one_skeleton.cpp)
add_executable( pc ctl_test.cpp test_product_cell.cpp)
#add_executable( scc ctl_test.cpp test_simplicial_chain_complex.cpp)
#add_executable( vr ctl_test.cpp test_vr.cpp)
