#eenable_testing()
add_executable( as ctl_test.cpp test_abstract_simplex.cpp)
add_test( "as" as) 
add_executable( bt ctl_test.cpp test_blowup_tool.cpp)
add_test( "bt" bt) 

add_executable( chain ctl_test.cpp test_chain.cpp)
add_test( "chain" chain)
add_executable( cg ctl_test.cpp test_cover_generation.cpp)
add_test( "covers" cg)
#add_executable( ct ctl_test.cpp test_cover_tool.cpp)
add_executable( cube ctl_test.cpp test_cube.cpp)
add_test( "cube" cube)
add_executable( ccc ctl_test.cpp test_cubical_chain_complex.cpp)
add_test( "cc" ccc)
add_executable( filt ctl_test.cpp test_filtration.cpp)
add_test( "filtration" filt)
add_executable( ff ctl_test.cpp test_finite_field.cpp)
add_test( "ff" ff)
add_executable( os ctl_test.cpp test_one_skeleton.cpp)
add_test( "os" os)
add_executable( pc ctl_test.cpp test_product_cell.cpp)
add_test( "pc" pc)
#add_executable( scc ctl_test.cpp test_simplicial_chain_complex.cpp)
#add_executable( vr ctl_test.cpp test_vr.cpp)
